Fix layout issues in firefox and safari

--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -14,6 +14,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+  min-height: 0;
 }
 
 .player {
