--- a/src/components/weaponMenu/weaponMenu.css
+++ b/src/components/weaponMenu/weaponMenu.css
@@ -12,7 +12,7 @@
   display: block;
   max-height: 200px;
   margin: 10px 0;
-  width: 80%;
+  max-width: 80%;
 }
 
 .weapon-menu__option:hover {
